Center image, new install-desktop script

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,9 @@
             </section>
         </nav>
 
-        <img id="backgroundImage"/>
+	<div id="background">
+	  <img id="backgroundImage"/>
+	</div>
         <div class="row">
         <div class='large-6 columns' id="gameDetails">
         <p id="gameName" class="border"></p>
