Unified images in sheets, download image from google

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,10 @@
             <p id="gameRating" class="border"></p>
             <p id="gameDeveloper" class="border"></p>
             <div id="actions" class="large-12">
-              <p id="play" class="icon img-play" ></p>
-              <p id="favorite" class="icon img-favorite"></p>
-              <p id="todo" class="img-todo icon"></p>
-              <p id="finish" class="img-finish icon"></p>
+              <button id="play" class="icon-play" ></button>
+              <button id="favorite" class="icon-favorite"></button>
+              <button id="todo" class="icon-todo"></button>
+              <button id="finish" class="icon-finish"></button>
             </div>
             <p id="gameCount"></p>
             </div>
@@ -51,10 +51,10 @@
             </div>
             <div class='searchBar'  >
               <input class='left' placeholder="Game name"  type='text' id='searchInput'/>
-              <button class="secondary icon img-search"  />
-              <button class="secondary icon img-favorite"  />
-              <button class="secondary icon img-todo"  />
-              <button class="secondary icon img-finish"  />
+              <button class="secondary icon-search"  />
+              <button class="secondary icon-favorite"  />
+              <button class="secondary icon-todo"  />
+              <button class="secondary icon-finish"  />
             </div>
             <div id="listFiles" class=" border"></div>
             <p id="fileCount"></p>
