Add stats, most played and last played, GC

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
               <button class="secondary icon-favorite"  />
               <button class="secondary icon-todo"  />
               <button class="secondary icon-finish"  />
+              <button class='icon-last-played' />
+              <button class='icon-most-played' />
+
             </div>
             <div id="listFiles" class=" border">
             <!-- Here goes the list of games -->
